Changes to comms memory

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ profile
 **/doxygen/build
 **/.idea
 extras/Projucer/JUCECompileEngine.dylib
+extras/AudioPluginHost/Builds/**
 
 .idea
 **/cmake-build*
